# face_recognition_models

./: .gitignore  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg
.github/workflows/: main.yml  publish.yml
face_recognition_models/: __init__.py
